# chatuskoti-evals

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
artifacts/: index.md
artifacts/strong_v1.3.0_torch/: annotation_cases.csv
artifacts/strong_v1_3_torch/: annotation_cases.csv  manifest.json
chatuskoti_evals/: __init__.py  __main__.py  actions.py  annotation.py  benchmark.py  cli.py  config.py  coupling.py  models.py  reporting.py  resolver.py  runner.py  scoring.py  wisdom.py
chatuskoti_evals/cli/: __main__.py  actions.py  cli.py  reporting.py
chatuskoti_evals/core/: config.py  coupling.py  models.py  wisdom.py
configs/: vec3_prototype.json
docs/: canonical_failure_benchmark.md  demo.md  failure_injection_set.md  index.md  next_steps.md  paper_figure_1.md  real_backend.md  release_checklist.md  release_demo.md  why_four_states.md
docs/usage/: demo.md  (+2 more)
scripts/: generate_ablation_report.py  generate_challenge_table.py  generate_distinguishability_matrix.py  generate_failure_figure.py  run_simulator_bundle.sh  run_torch_bundle.sh  run_torch_release_bundle.sh  verify_release_bundle.py
tests/: conftest.py  test_annotation.py  test_backend_factory.py  test_cli.py  test_coupling.py  test_failure_runner.py  test_progress.py  test_proposals.py  test_public_surface.py  test_runner.py  test_scenarios.py  test_scoring.py  test_wisdom.py
(+50 files in other folders)
