[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatuskoti-evals"
version = "1.2.0"
description = "Benchmark-specific evaluator for deciding whether research gains are real, stable, and decision-ready."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["chatuskoti_evals*"]
